--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -777,7 +777,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>There are many different schemes of neighborhood boundaries (or geographies) available for different datasets. These include:
+                        <p>There are many schemes of neighborhood boundaries (or geographies) available for different datasets. These include:
                             <ul>
                                 <li>Citywide</li>
                                 <li>Borough</li>
@@ -787,7 +787,7 @@
                             </ul>
                         </p> 
                         <p>We try to make data available at as fine a geographic resolution as we can. <a href="../../data-stories/geographies/">Read more about different geographies at this data story</a>.</p>
-                        <p>It would be convenient if each dataset could be made available at the same geography, but unfortunately they cannot - what neighborhood boundaries are available depends on specifics of the underlying dataset.</p>
+                        <p>It would be convenient if each dataset could be made available at the same geography, but this is not always possible. The neighborhood boundaries available depend on the specifics of the underlying dataset.</p>
 
                     </div>
                     <div class="modal-footer">
@@ -810,7 +810,7 @@
                 </div>
                 <div class="modal-body">
                     <p>When we have multiple years of data, we show the data as trend charts.</p>
-                    <p>Trends for individual neighborhoods tend to be very unstable (or bouncy), due to small counts for outcomes in individual neighborhoods. To show clearer trends, we usually aggregate up and show trend data by Borough.</p>
+                    <p>Trends for individual neighborhoods tend to be very unstable (or "bouncy"), due to small counts for outcomes in individual neighborhoods. To show clearer trends, we usually aggregate up and show trend data by Borough.</p>
                     <p>Options on some indicators let you compare this indicator to other similar indicators.</p>
                 </div>
                 <div class="modal-footer">
@@ -832,8 +832,8 @@
                          </button>
                      </div>
                      <div class="modal-body">
-                         <p>We try to make data avialable as soon as we can.</p>
-                         <p>Many datasets take a long time to reach us - a 'lag' of several years, during which data are gathered from different entities to try to create a complete dataset; data are processed (cleaned, deduplicated, etc), and analyzed. It can take several years to prepare a dataset - so a dataset that is several years old is sometimes the most up-to-date information available.</p>
+                         <p>We try to make data available as soon as we can.</p>
+                         <p>Many datasets take a long time to reach us — a "lag" of several years, during which data are gathered from different entities to try to create a complete dataset; data are processed (cleaned, deduplicated, etc), and analyzed. It can take several years to prepare a dataset — so a dataset that is several years old is sometimes the most up-to-date information available. Still, this data continues to show us valuable trends and insights. </p>
                          <p>We also try to display datasets that have been available for many years. Some datasets (like those that are asked on surveys) are not asked every year of the survey, which means that we cannot provide annual data.</p>
                          <p>For some datasets, we have to aggregate time periods in order to break down data by borough or neighborhood.</p>
                      </div>
@@ -856,8 +856,8 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Measures are the numeric ways that a dataset (or indicator) are expressed. Examples of different measures might be: number; percent; or rate. </p>
-                    <p>A number tells us how much of an outcome is in a certain area. But a rate (usually expressed as, for example, 40 per 100,000) tells us much much of an outcome there is, <em>relative to the population of the area in question</em>. This lets us compare neighborhoods of different sizes.</p>
+                    <p>Measures are the numeric ways that a dataset (or indicator) are expressed. Examples of different measures might be: number, percent or rate. </p>
+                    <p>A number tells us how much of an outcome is in a certain area. But a rate (usually expressed as, for example, 40 per 100,000) tells us how much of an outcome there is, <em>relative to the population of the area in question</em>. This lets us compare neighborhoods of different sizes.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
