--- a/assets/scss/__portal-custom.scss
+++ b/assets/scss/__portal-custom.scss
@@ -244,7 +244,7 @@
     background-color: $breadcrumb-bg;
     @include border-radius($border-radius);
     font-size: 1rem;
-    line-height: 1.25px;
+    line-height: 1.25rem;
 }
 
 .breadcrumb-item {
