--- a/themes/dohmh/layouts/key-topics/single.html
+++ b/themes/dohmh/layouts/key-topics/single.html
@@ -12,9 +12,9 @@
 </style>
 
 <article id="skip-header-target">
-    <div class="container-fluid">
+    <div class="container wide">
         <div class="row">
-            <div class="col-md-10 col-sm-12 mx-auto mt-2 mb-2">
+            <div class="col-lg-10 col-md-12 mx-auto mt-2 mb-2">
                 <nav aria-label="breadcrumb" class="">
                     <ul class="breadcrumb">
                         <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
