fix breadcrumb placement

--- a/themes/dohmh/layouts/data-features/nyccas-report.html
+++ b/themes/dohmh/layouts/data-features/nyccas-report.html
@@ -26,10 +26,10 @@
     </div>
 </div>
 
-<article class="container-fluid" id="skip-header-target">
+<article class="container wide" id="skip-header-target">
 
     <div class="row">
-        <div class="col-md-11 mx-auto mt-2 pl-0">
+        <div class="col-md-8 col-sm-12 mx-auto mt-2">
             <nav aria-label="breadcrumb" class="mb-4">
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
@@ -38,7 +38,6 @@
                 </ul>
             </nav>
         </div>
-        <div class="col-md-2 mr-auto"></div>
     </div>
 
     <!-- Introduction and Key Findings -->
