--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -26,11 +26,11 @@
             </div>
 
             <div class="col-3 px-4">
-              <img src="img/Vulnerable_groups1.svg" />
+              <img src="img/Neighbors.svg" />
             </div>
 
             <div class="col-3 px-4">
-              <img src="img/Fan.svg" />
+              <img src="img/Library.svg" />
             </div>
 
             <div class="col-3 px-4">
