--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -157,7 +157,7 @@
       <div class="p-2 border mt-4 hide" id="finalInfo">
         <h4 id="messageResults">Let's take a look at your situation.</h4>
         <p>
-          Here are some recommendations, tailored just for you, that can help
+          Here are some recommendations, tailored for you and your household, that can help
           keep you cool and safe in hot weather or bad air quality.
         </p>
 
