make breadcrumb spacing and placement consistent with received designs

--- a/themes/dohmh/layouts/about/section.html
+++ b/themes/dohmh/layouts/about/section.html
@@ -2,10 +2,10 @@
 
 <article class="container-fluid overflow-hidden" id="primary-content">
 
-  <div class="row mb-4 mt-2">
+  <div class="row mb-4">
     <div class="col-md-8 col-sm-12 mx-auto">
 
-      <nav aria-label="breadcrumb" class="mb-2">
+      <nav aria-label="breadcrumb" class="mt-2 mb-3">
         <ul class="breadcrumb">
             <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">About</li>
