--- a/themes/dohmh/layouts/data-explorer/data-index.html
+++ b/themes/dohmh/layouts/data-explorer/data-index.html
@@ -1,7 +1,7 @@
 {{- define "main" -}}
 
 <article class="container-fluid" id="skip-header-target">
-    <div class="col-md-11 col-sm-12 mx-auto my-4">
+    <div class="col-md-11 col-sm-12 mx-auto mb-4">
 
         <div class="row no-gutters mb-2">
             <div class="col">
