--- a/themes/dohmh/layouts/data-features/nyccas-report.html
+++ b/themes/dohmh/layouts/data-features/nyccas-report.html
@@ -29,8 +29,8 @@
 <article class="container wide" id="skip-header-target">
 
     <div class="row">
-        <div class="col-md-8 col-sm-12 mx-auto mt-2">
-            <nav aria-label="breadcrumb" class="mb-4">
+        <div class="col-md-8 col-sm-12 mx-auto mt-2 mb-3">
+            <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
                     <li class="breadcrumb-item"><a href={{ relURL "data-features" }}>Data Features</a></li>
