--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -241,8 +241,8 @@
 
 <article class="container-fluid" id="skip-header-target">
     <div class="row">
-        <div class="col-12 mb-4">
-            <nav aria-label="breadcrumb" class="my-2">
+        <div class="col-12 mt-2 mb-3">
+            <nav aria-label="breadcrumb">
                 <ul class="breadcrumb mr-auto">
                     <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
                     <li class="breadcrumb-item"><a href={{ relURL "data-explorer" }}>Data Explorer</a></li>
