--- a/themes/dohmh/layouts/data-features/realtime.html
+++ b/themes/dohmh/layouts/data-features/realtime.html
@@ -18,21 +18,21 @@
 
 <article class="container-fluid" id="skip-header-target">
 
-    <div class="row">
-        <div class="col-md-10 mx-auto mt-2">
-            <nav aria-label="breadcrumb" class="mb-4">
-                <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
-                    <li class="breadcrumb-item"><a href={{ relURL "data-features" }}>Data Features</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
-                </ul>
-            </nav>
-        </div>
-
-    </div>
 
     <div class="row">
-        <div class="col-10 mx-auto">
+        <div class="col-md-10 col-sm-12 mx-auto">
+            <div class="row">
+                <div class="col-12 mt-2 mb-3">
+                    <nav aria-label="breadcrumb">
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
+                            <li class="breadcrumb-item"><a href={{ relURL "data-features" }}>Data Features</a></li>
+                            <li class="breadcrumb-item active d-none d-sm-block" aria-current="page">{{ .Title }}</li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+
             <h1 class="h2" data-pagefind-weight="10.0">
                 <i class="fas fa-star" aria-hidden="true" style="margin-right: 10px"></i>{{ .Title }}
             </h1>
