--- a/themes/dohmh/layouts/data-features/report.html
+++ b/themes/dohmh/layouts/data-features/report.html
@@ -3,20 +3,6 @@
 <article class="container-fluid" id="skip-header-target">
 
     <div class="row">
-        <div class="col-md-11 mx-auto mt-2 pl-0">
-            <nav aria-label="breadcrumb" class="mb-4">
-                <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
-                    <li class="breadcrumb-item"><a href={{ relURL "data-features" }}>Data Features</a></li>
-
-                    <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
-                </ul>
-            </nav>
-        </div>
-        <div class="col-md-2 mr-auto"></div>
-    </div>
-
-    <div class="row">
 
     {{ $weight := "" }}
 
@@ -25,6 +11,19 @@
     {{ end }}
 
         <div class="col-md-8 col-sm-12 mx-auto mb-6" data-pagefind-weight="{{ $weight }}">
+            <div class="row">
+                <div class="col-12 mx-auto mt-2 mb-3">
+                    <nav aria-label="breadcrumb">
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
+                            <li class="breadcrumb-item"><a href={{ relURL "data-features" }}>Data Features</a></li>
+        
+                            <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+
                 <h1 class="h2" data-pagefind-weight="10.0">
                     <i class="fas fa-star" aria-hidden="true" style="margin-right: 10px"></i>{{ .Title }}
                 </h1>
