--- a/themes/dohmh/layouts/data-features/rmz.html
+++ b/themes/dohmh/layouts/data-features/rmz.html
@@ -3,8 +3,8 @@
 <article class="container-fluid" id="skip-header-target">
 
     <div class="row">
-        <div class="col-md-11 mx-auto mt-2">
-            <nav aria-label="breadcrumb" class="mb-4">
+        <div class="col-md-11 mx-auto mt-2 mb-3">
+            <nav aria-label="breadcrumb" class="">
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
                     <li class="breadcrumb-item"><a href={{ relURL "data-features" }}>Data Features</a></li>
