--- a/themes/dohmh/layouts/data-stories/advanced.html
+++ b/themes/dohmh/layouts/data-stories/advanced.html
@@ -34,7 +34,7 @@
 
 <article class="container-fluid" id="skip-header-target">
     
-    <div class="row mt-2">
+    <div class="row mt-2 mb-3">
         <div class="col-12">
             <nav aria-label="breadcrumb" class="border-top">
                 <ul class="breadcrumb">
