--- a/themes/dohmh/layouts/nr-output/section.html
+++ b/themes/dohmh/layouts/nr-output/section.html
@@ -1,11 +1,11 @@
 {{- define "main" -}}
 
-<div class="mt-2">
+<div>
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-10 mx-auto col-sm-12">
         <!-- content goes here -->
-        <nav aria-label="breadcrumb" class="mb-2">
+        <nav aria-label="breadcrumb" class="mt-2 mb-3">
           <ul class="breadcrumb">
               <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
               <li class="breadcrumb-item"><a href={{ relURL "neighborhood-reports" }}>Neighborhood Reports</a></li>
