--- a/themes/dohmh/layouts/nr-output/single.html
+++ b/themes/dohmh/layouts/nr-output/single.html
@@ -140,9 +140,9 @@
 
 <section class="container-fluid" id="skip-header-target" data-pagefind-ignore="all">
 
-    <div class="row mt-2">
+    <div class="row">
         <div class="col-lg-10 mx-auto col-12">
-            <nav aria-label="breadcrumb" class="mb-2">
+            <nav aria-label="breadcrumb" class="mt-2 mb-3">
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
                     <li class="breadcrumb-item"><a href={{ relURL "neighborhood-reports" }}>Neighborhood Reports</a></li>
