--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -637,6 +637,10 @@
                 </div>
                 <div class="modal-body">
                     {{ .Content }}
+                    <hr class="my-2">
+                    {{ with .Params.azlink }}
+                    <a href="{{ . }}"><i class="fas fa-external-link-alt mr-1" aria-hidden="true"></i>Get more resources about {{ lower $.Title }}</a>.
+                    {{ end }}
                 </div>
                 <div class="modal-footer" data-pagefind-ignore="all">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
