add note re properties

--- a/themes/dohmh/layouts/data-features/rmz.html
+++ b/themes/dohmh/layouts/data-features/rmz.html
@@ -48,6 +48,7 @@
                     <li><a href="compliance-inspections.csv">Compliance inspections</a></li>
                     <li><a href="exterminator-visits.csv">Exterminator visits</a></li>
                 </ul>
+                <p class="fs-sm">Inspections are of all properties that have a tax lot, including privately-owned property, public property, parks, schools, and vacant lots.</p>
             </div>
 
             <a class="btn btn-outline-primary btn-block my-2" href="../rat-information-portal">For individual property inspection results, visit the Rat Information Portal</a>
@@ -138,11 +139,7 @@
         </div>
     </div>
 
-    <div class="row my-1">
-        <div class="col-md-11 mx-auto">
-            <div id="info" class="hide py-2 px-1" style="border-left: 8px solid #841972 !important; background-color: #fafafa"></div>
-        </div>
-    </div>
+
 
 
 
