--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -75,7 +75,7 @@
         <p>
           Today's weather:
           <span id="hot" class="font-weight-bold p-1">HOT</span>. <br />
-          The forecast high is <span id="maxTemp">YY</span> today. It is
+          The forecast high is <span id="forecastTemp">YY</span> today. It is
           currently <span id="currentTemp">XX</span>.
           <a href="https://forecast7.com/en/40d71n74d01/new-york/?unit=us"
             >Get a full weather forecast here</a
