revise console logs

--- a/themes/dohmh/layouts/partials/nyccas_pollutant_trends.html
+++ b/themes/dohmh/layouts/partials/nyccas_pollutant_trends.html
@@ -209,7 +209,7 @@
             console.log('*****METADATA*****')
             console.log('pollutant: ' + trendPollutant)
             console.log('sources: ' + sources)
-            console.log('source: ' + source)
+            // console.log('source: ' + source)
             console.log('units: ' + units)
         }
 
