--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="col-3 px-4">
-              <img src="img/Library.svg" />
+              <img src="img/ACperson.svg" />
             </div>
 
             <div class="col-3 px-4">
@@ -157,8 +157,9 @@
       <div class="p-2 border mt-4 hide" id="finalInfo">
         <h4 id="messageResults">Let's take a look at your situation.</h4>
         <p>
-          Here are some recommendations, tailored for you and your household, that can help
-          keep you cool and safe in hot weather or bad air quality.
+          Here are some recommendations, tailored for you and your household,
+          that can help keep you cool and safe in hot weather or bad air
+          quality.
         </p>
 
         <div id="finalMessages">
