--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -158,7 +158,7 @@
         <h4 id="messageResults">Let's take a look at your situation.</h4>
         <p>
           Here are some recommendations, tailored for you and your household,
-          that can help keep you cool and safe in hot weather or bad air
+          that can help keep you cool and safe in hot weather or unhealthy air
           quality.
         </p>
 
