--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -246,9 +246,9 @@
                 <ul class="breadcrumb mr-auto">
                     <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
                     <li class="breadcrumb-item"><a href={{ relURL "data-explorer" }}>Data Explorer</a></li>
-                    <li class="breadcrumb-item"><button type="button" class="btn btn-sm btn-outline-light text-primary" data-toggle="modal"
-                        data-target="#topicModal">
-                        <i class="fas fa-ellipsis-h font-weight-bold" aria-hidden="true"></i>
+                    <li class="breadcrumb-item">{{ .Title }}&nbsp;
+                        <button type="button" class="btn btn-outline-primary badge" data-toggle="modal" data-target="#topicModal">
+                            <i class="fas fa-ellipsis-h font-weight-bold" aria-hidden="true"></i>
                         </button></li>
                 </ul>
             </nav>
