--- a/themes/dohmh/layouts/partials/header.html
+++ b/themes/dohmh/layouts/partials/header.html
@@ -70,10 +70,10 @@
 
                     <div class="col-lg py-3">
                         <div class="d-flex justify-content-center justify-content-lg-start">
-                            <a href="{{ site.BaseURL }}"><img src="{{ site.BaseURL }}7618350_heatmap_business_analytics_statistics_icon-gpr.ico" style="height: 67px" class="pr-1"></a>
+                            <a href={{ relURL "" }}><img src={{ relURL "7618350_heatmap_business_analytics_statistics_icon-gpr.ico" }} style="height: 67px" class="pr-1"></a>
 
                             <p class="text-white title-hover">
-                                <span class="site-subtitle"><a href="{{ site.BaseURL }}" class="link-no-dec">Environment & Health</span>
+                                <span class="site-subtitle"><a href='{{ relURL "" }}' class="link-no-dec">Environment & Health</span>
                                 <span class="site-title">Data Portal</a></span>
                             </p>
 
