--- a/themes/dohmh/layouts/partials/related.html
+++ b/themes/dohmh/layouts/partials/related.html
@@ -11,7 +11,7 @@
 
             {{- if eq $layout "button" -}}
 
-            <a class="{{ $extraClass }} btn btn-outline-primary btn-md has-icon disperse mb-1" href="{{ .RelPermalink }}">
+            <a class="{{ $extraClass }} btn btn-light-green-bg btn-md has-icon disperse mb-1" href="{{ .RelPermalink }}">
             <span class="fas fa-angle-right" aria-hidden="true"></span>
             <span class="title">{{ .Title }}</span>
             </a>
